# pkglock-rust

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: ci.yml
docs/: development.md  maintenance-suggestions.md
src/: lib.rs  main.rs
tests/: integration_test.rs
