[package]
name = "pkglock"
version = "0.2.0"
authors= ["Logan Lindquist <logan@llbbl.com>"]
edition = "2021"
rust-version = "1.86"

description = "A utility to modify URLs in package-lock.json"
license = "MIT"
readme = "README.md"

repository = "https://github.com/llbbl/pkglock-rust"
keywords = ["json", "npm", "registry"]
categories = ["command-line-utilities", "development-tools::build-utils"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
regex = "1.10.2"
url = "2"

[dev-dependencies]
tempfile = "3.27"

[lib]
name = "pkglock_lib"
path = "src/lib.rs"

[[bin]]
name = "pkglock"
path = "src/main.rs"

